:recycle: RandomReservationExtractor추가에 따른 로직 수정